--- a/WorkineThor/src/WorkineThor/view/CreateProjectNext.fxml
+++ b/WorkineThor/src/WorkineThor/view/CreateProjectNext.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WorkineThor.view.CreateProjectNextController">
    <center>
-      <Button mnemonicParsing="false" text="Button" BorderPane.alignment="CENTER" />
+      <Button fx:id="addfile" mnemonicParsing="false" onAction="#addFileFunc" text="Add file" BorderPane.alignment="CENTER" />
    </center>
+   <bottom>
+      <ListView fx:id="filelist" editable="true" prefHeight="200.0" prefWidth="581.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
