--- a/WorkineThor/src/WorkineThor/view/MainCreateProjectItems.fxml
+++ b/WorkineThor/src/WorkineThor/view/MainCreateProjectItems.fxml
@@ -32,7 +32,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="ProjectNameField" layoutX="215.0" layoutY="58.0" prefHeight="26.0" prefWidth="261.0" promptText="Insert Project Name">
+            <TextField fx:id="ProjectNameField" layoutX="215.0" layoutY="58.0" onKeyReleased="#nextYes" prefHeight="26.0" prefWidth="261.0" promptText="Insert Project Name">
                <font>
                   <Font size="15.0" />
                </font>
@@ -44,7 +44,7 @@
    <bottom>
       <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="459.0" layoutY="22.0" mnemonicParsing="false" onAction="#goNext" text="Next" />
+            <Button fx:id="Next" layoutX="459.0" layoutY="22.0" mnemonicParsing="false" onAction="#goNext" text="Next" />
          </children>
       </AnchorPane>
    </bottom>
