--- a/WorkineThor/src/workineThor/view/CreateProjectNext.fxml
+++ b/WorkineThor/src/workineThor/view/CreateProjectNext.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.CreateProjectNextController">
    <center>
@@ -11,4 +13,11 @@
    <bottom>
       <ListView fx:id="filelist" editable="true" prefHeight="200.0" prefWidth="581.0" BorderPane.alignment="CENTER" />
    </bottom>
+   <top>
+      <Label text="Label" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+   </top>
 </BorderPane>
