--- a/WorkineThor/bin/workineThor/view/CreateProjectNext.fxml
+++ b/WorkineThor/bin/workineThor/view/CreateProjectNext.fxml
@@ -3,13 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.CreateProjectNextController">
-   <center>
-      <Button fx:id="addfile" mnemonicParsing="false" onAction="#addFileFunc" text="Add file" BorderPane.alignment="CENTER" />
-   </center>
    <bottom>
       <ListView fx:id="filelist" editable="true" prefHeight="200.0" prefWidth="581.0" BorderPane.alignment="CENTER" />
    </bottom>
@@ -20,4 +18,12 @@
          </font>
       </Label>
    </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="addFileDrive" layoutX="392.0" layoutY="72.0" mnemonicParsing="false" text="Add file from Drive" />
+            <Button fx:id="addfile" layoutX="88.0" layoutY="72.0" mnemonicParsing="false" onAction="#addFileFunc" text="Add file" />
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
