--- a/WorkineThor/src/workineThor/view/CreateProjectNext.fxml
+++ b/WorkineThor/src/workineThor/view/CreateProjectNext.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.CreateProjectNextController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.CreateProjectNextController">
    <bottom>
       <ListView fx:id="filelist" editable="true" prefHeight="200.0" prefWidth="581.0" BorderPane.alignment="CENTER" />
    </bottom>
@@ -21,8 +21,8 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="addFileDrive" layoutX="392.0" layoutY="72.0" mnemonicParsing="false" text="Add file from Drive" />
-            <Button fx:id="addfile" layoutX="88.0" layoutY="72.0" mnemonicParsing="false" onAction="#addFileFunc" text="Add file" />
+            <Button fx:id="addFileDrive" layoutX="528.0" layoutY="113.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="200.0" text="Add file from Drive" />
+            <Button fx:id="addfile" layoutX="110.0" layoutY="113.0" mnemonicParsing="false" onAction="#addFileFunc" prefHeight="39.0" prefWidth="100.0" text="Add file" />
          </children>
       </AnchorPane>
    </center>
