--- a/WorkineThor/src/workineThor/view/MainCreateProjectItems.fxml
+++ b/WorkineThor/src/workineThor/view/MainCreateProjectItems.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -7,45 +8,50 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.MainCreateProjectController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.MainCreateProjectController">
    <top>
-      <Label text="Create Project" BorderPane.alignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="73.0" prefWidth="427.0" text="Create Project" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
-            <Font size="25.0" />
+            <Font size="50.0" />
          </font>
       </Label>
    </top>
-   <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+   <bottom>
+      <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <CheckBox fx:id="DriveBox" layoutX="215.0" layoutY="119.0" mnemonicParsing="false" onAction="#DriveBoxYes" />
-            <Label layoutX="48.0" layoutY="115.0" text="Drive:">
+            <Button fx:id="Next" defaultButton="true" layoutX="621.0" layoutY="7.0" mnemonicParsing="false" onAction="#goNext" prefHeight="57.0" prefWidth="134.0" text="Next">
+               <font>
+                  <Font size="30.0" />
+               </font></Button>
+         </children>
+      </AnchorPane>
+   </bottom>
+   <center>
+      <AnchorPane prefHeight="362.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+         <children>
+            <CheckBox fx:id="DriveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#DriveBoxYes" prefHeight="0.0" prefWidth="0.0" />
+            <Label layoutX="127.0" layoutY="178.0" prefHeight="39.0" prefWidth="91.0" text="Drive:">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="48.0" layoutY="60.0" text="Project Name:">
+            <Label layoutX="127.0" layoutY="90.0" prefHeight="32.0" prefWidth="152.0" text="Project Name:">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="ProjectNameField" layoutX="215.0" layoutY="58.0" onKeyReleased="#nextYes" prefHeight="26.0" prefWidth="261.0" promptText="Insert Project Name">
+            <TextField fx:id="ProjectNameField" layoutX="358.0" layoutY="87.0" onKeyReleased="#nextYes" prefHeight="38.0" prefWidth="262.0" promptText="Insert Project Name">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <ChoiceBox fx:id="DriveSelector" layoutX="279.0" layoutY="115.0" onDragDetected="#initialize" prefWidth="150.0" />
-         </children>
-      </Pane>
-   </center>
-   <bottom>
-      <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="Next" layoutX="459.0" layoutY="22.0" mnemonicParsing="false" onAction="#goNext" text="Next" />
+            <ChoiceBox fx:id="DriveSelector" layoutX="443.0" layoutY="183.0" onDragDetected="#initialize" prefHeight="30.0" prefWidth="177.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></ChoiceBox>
          </children>
       </AnchorPane>
-   </bottom>
+   </center>
 </BorderPane>
