--- a/WorkineThor/bin/workineThor/view/LoginView.fxml
+++ b/WorkineThor/bin/workineThor/view/LoginView.fxml
@@ -9,17 +9,18 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="316.0" prefWidth="389.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.LoginViewController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workineThor.view.LoginViewController">
    <center>
       <AnchorPane>
          <children>
-            <GridPane layoutX="-1.0" prefHeight="316.0" prefWidth="389.0">
+            <GridPane prefHeight="600.0" prefWidth="800.0">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.59998321533203" minWidth="0.0" prefWidth="31.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.79998779296875" minWidth="10.0" prefWidth="110.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="221.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.0" minWidth="10.0" prefWidth="35.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.59998321533203" minWidth="0.0" prefWidth="63.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.79998779296875" minWidth="10.0" prefWidth="118.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="259.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.0" minWidth="10.0" prefWidth="148.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -30,11 +31,25 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Username" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label text="Password" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="userName" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button fx:id="loginBtn" mnemonicParsing="false" text="Login" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                  <PasswordField fx:id="password" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Label text="Username:" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font size="25.0" />
+                     </font></Label>
+                  <Label text="Password:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="25.0" />
+                     </font></Label>
+                  <TextField fx:id="userName" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="password" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                     <children>
+                        <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" layoutX="86.0" layoutY="20.0" mnemonicParsing="false" text="Login" textAlignment="CENTER">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
                </children>
             </GridPane>
          </children>
