--- a/WorkineThor/bin/workinethor/view/MainCreateProjectItems.fxml
+++ b/WorkineThor/bin/workinethor/view/MainCreateProjectItems.fxml
@@ -21,7 +21,7 @@
    <bottom>
       <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="Next" defaultButton="true" layoutX="621.0" layoutY="7.0" mnemonicParsing="false" onAction="#goNext" prefHeight="57.0" prefWidth="134.0" text="Next">
+            <Button fx:id="next" defaultButton="true" layoutX="621.0" layoutY="7.0" mnemonicParsing="false" onAction="#goNext" prefHeight="57.0" prefWidth="134.0" text="Next">
                <font>
                   <Font size="30.0" />
                </font></Button>
@@ -31,7 +31,7 @@
    <center>
       <AnchorPane prefHeight="362.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <CheckBox fx:id="DriveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#DriveBoxYes" prefHeight="0.0" prefWidth="0.0" />
+            <CheckBox fx:id="driveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#DriveBoxYes" prefHeight="0.0" prefWidth="0.0" />
             <Label layoutX="127.0" layoutY="178.0" prefHeight="39.0" prefWidth="91.0" text="Drive:">
                <font>
                   <Font size="20.0" />
@@ -42,12 +42,12 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="ProjectNameField" layoutX="358.0" layoutY="87.0" onKeyReleased="#nextYes" prefHeight="38.0" prefWidth="262.0" promptText="Insert Project Name">
+            <TextField fx:id="projectNameField" layoutX="358.0" layoutY="87.0" onKeyReleased="#nextYes" prefHeight="38.0" prefWidth="262.0" promptText="Insert Project Name">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <ChoiceBox fx:id="DriveSelector" layoutX="443.0" layoutY="183.0" onDragDetected="#initialize" prefHeight="30.0" prefWidth="177.0">
+            <ChoiceBox fx:id="driveSelector" layoutX="443.0" layoutY="183.0" onDragDetected="#initialize" prefHeight="30.0" prefWidth="177.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets></ChoiceBox>
