--- a/WorkineThor/bin/workinethor/view/MainCreateProjectItems.fxml
+++ b/WorkineThor/bin/workinethor/view/MainCreateProjectItems.fxml
@@ -31,7 +31,7 @@
    <center>
       <AnchorPane prefHeight="362.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
-            <CheckBox fx:id="driveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#DriveBoxYes" prefHeight="0.0" prefWidth="0.0" />
+            <CheckBox fx:id="driveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#driveBoxYes" prefHeight="0.0" prefWidth="0.0" />
             <Label layoutX="127.0" layoutY="178.0" prefHeight="39.0" prefWidth="91.0" text="Drive:">
                <font>
                   <Font size="20.0" />
