--- a/WorkineThor/src/workinethor/view/MainCreateProjectItems.fxml
+++ b/WorkineThor/src/workinethor/view/MainCreateProjectItems.fxml
@@ -51,6 +51,11 @@
                <opaqueInsets>
                   <Insets />
                </opaqueInsets></ChoiceBox>
+            <Button layoutX="303.0" layoutY="268.0" mnemonicParsing="false" onAction="#addMember" text="Add Member">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </center>
