--- a/WorkineThor/src/workinethor/view/NavBar.fxml
+++ b/WorkineThor/src/workinethor/view/NavBar.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.MainNavBarController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.NavBarView">
    <top>
       <ToolBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <items>
