--- a/WorkineThor/src/workinethor/view/CPAddFile.fxml
+++ b/WorkineThor/src/workinethor/view/CPAddFile.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.CreateProjectNextController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.CPAddFileView">
    <bottom>
       <ListView fx:id="filelist" editable="true" prefHeight="200.0" prefWidth="581.0" BorderPane.alignment="CENTER" />
    </bottom>
