--- a/WorkineThor/bin/logic/workinethor/view/NavBar.fxml
+++ b/WorkineThor/bin/logic/workinethor/view/NavBar.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.NavBarView">
    <top>
-      <ToolBar prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <ToolBar fx:id="toolbar" prefHeight="30.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <items>
             <AnchorPane prefHeight="30.0" prefWidth="782.0">
                <children>
@@ -21,6 +21,7 @@
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#goHome" text="Home" />
                             <MenuItem mnemonicParsing="false" onAction="#goCreate" text="Create Project" />
+                            <MenuItem mnemonicParsing="false" onAction="#goProject" text="Browse Project" />
                           </items>
                            <font>
                               <Font size="18.0" />
