--- a/WorkineThor/bin/logic/workinethor/view/BrowseProject.fxml
+++ b/WorkineThor/bin/logic/workinethor/view/BrowseProject.fxml
@@ -2,7 +2,4 @@
 
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane fx:id="background" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.BrowseProjectView">
-	<!-- TODO Add Nodes -->
-</BorderPane>
+<BorderPane fx:id="background" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.BrowseProjectView" />
