--- a/WorkineThor/src/logic/workinethor/view/CreateProject.fxml
+++ b/WorkineThor/src/logic/workinethor/view/CreateProject.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.CreateProjectView">
+<BorderPane fx:id="pane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.CreateProjectView">
    <top>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="73.0" prefWidth="427.0" text="Create Project" textAlignment="CENTER" BorderPane.alignment="CENTER">
+      <Label fx:id="label" alignment="CENTER" contentDisplay="CENTER" prefHeight="73.0" prefWidth="427.0" text="Create Project" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
             <Font size="50.0" />
          </font>
@@ -32,12 +32,12 @@
       <AnchorPane prefHeight="362.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
             <CheckBox fx:id="driveBox" layoutX="358.0" layoutY="189.0" mnemonicParsing="false" onAction="#driveBoxYes" prefHeight="0.0" prefWidth="0.0" />
-            <Label layoutX="127.0" layoutY="178.0" prefHeight="39.0" prefWidth="91.0" text="Drive:">
+            <Label fx:id="labelDrive" layoutX="127.0" layoutY="178.0" prefHeight="39.0" prefWidth="91.0" text="Drive:">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="127.0" layoutY="90.0" prefHeight="32.0" prefWidth="152.0" text="Project Name:">
+            <Label fx:id="labelNameProject" layoutX="127.0" layoutY="90.0" prefHeight="32.0" prefWidth="152.0" text="Project Name:">
                <font>
                   <Font size="20.0" />
                </font>
@@ -51,7 +51,7 @@
                <opaqueInsets>
                   <Insets />
                </opaqueInsets></ChoiceBox>
-            <Button layoutX="303.0" layoutY="268.0" mnemonicParsing="false" onAction="#addMember" text="Add Member" underline="true">
+            <Button fx:id="add" layoutX="303.0" layoutY="268.0" mnemonicParsing="false" onAction="#addMember" text="Add Member" underline="true">
                <font>
                   <Font size="25.0" />
                </font>
